--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,16 @@
 ---
-title: Welcome to Middleman
+title: Middleman+Lionel Demo
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<h1>Middleman+Lionel Demo</h1>
+
+<table id='test-cases'>
+  <thead>
+    <tr>
+      <th>Library name</th>
+      <th>Version</th>
+    </tr>
+  </thead>
+  <tbody>
+  </tbody>
+</table>
