--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,9 @@ title: Middleman+Lionel Demo
   <thead>
     <tr>
       <th>Library name</th>
-      <th>Version</th>
+      <th>Gem name</th>
+      <th>Library version</th>
+      <th>CSS test (if applicable)</th>
     </tr>
   </thead>
   <tbody>
