Add jquery-fileupload-rails (javascript only :( )

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ title: Middleman+Lionel Demo
     <tr>
       <th>Library name</th>
       <th>Gem name</th>
-      <th>Library version</th>
+      <th>Javascript version</th>
       <th>CSS test (if applicable)</th>
     </tr>
   </thead>
