--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,8 +9,9 @@ title: Middleman+Lionel Demo
     <tr>
       <th>Library name</th>
       <th>Gem name</th>
-      <th>Javascript version</th>
+      <th>Javascript test</th>
       <th>CSS test (if applicable)</th>
+      <th>Image test (if applicable)</th>
     </tr>
   </thead>
   <tbody>
